--- a/style.css
+++ b/style.css
@@ -79,3 +79,15 @@ body {
 #namaTamu {
   font-size: 18px;
   font
+/* FADE ANIMATION */
+.fade {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 1s ease;
+}
+
+.fade.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
