--- a/style.css
+++ b/style.css
@@ -34,17 +34,26 @@ body::before {
 
 /* CARD */
 .card {
-  background: #f4f1ee;
   width: 100%;
   max-width: 500px;
   min-height: 88vh;
   border-radius: 30px;
   padding: 70px 30px;
   text-align: center;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+  box-shadow: 0 20px 40px rgba(0,0,0,0.15);
 
   display: flex;
   align-items: center;
+
+  position: relative;
+  overflow: hidden;
+
+  /* BACKGROUND BATIK */
+  background: 
+    linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.88)),
+    url("assets/batik-bg.jpg") center/cover no-repeat;
+}
+
 
   position: relative;   /* untuk ornamen */
   overflow: hidden;
@@ -147,5 +156,6 @@ body::before {
   opacity: 1;
   transform: translateY(0) scale(1);
 }
+
 
 
